--- a/index.html
+++ b/index.html
@@ -39,17 +39,10 @@
 
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <a class="navbar-brand" href="#">Na Minha Rua <sup>V2</sup></a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <div class="navbar-nav mr-auto">
-                </div>
-                <form class="form-inline my-2 my-lg-0">
+            <div class="navbar-nav mr-auto"></div>
+            <form class="form-inline my-2 my-lg-0">
                 <input class="form-control mr-sm-2" id="pesquisa" type="search" placeholder="Pesquisar.." aria-label="Search">
-                </form>
-            </div>
+            </form>
             </nav>
           
         <table id="lista" class="display table">
